<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeScreen">
    <!--    constrainlayout becouse its easy to constrain from all direction -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <View
            android:id="@+id/backgoundView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="@dimen/alpha_02"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/welcome_textView1"
            style="@style/titleLogin"
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:text="@string/welcome"
            android:textColor="@color/colorOrange"
            app:layout_constraintBottom_toBottomOf="@+id/backgoundView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.168" />

        <TextView
            android:id="@+id/welcome_textView2"
            style="@style/titleLogin"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginBottom="164dp"
            android:text="@string/welcome2"
            android:textColor="@color/colorOrange"
            app:layout_constraintBottom_toTopOf="@+id/welcomebutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_textView1"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/welcomebutton"
            style="@style/buttonApp"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_gravity="start"
            android:layout_marginTop="276dp"
            android:text="@string/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcome_textView1"
            app:layout_constraintStart_toStartOf="@+id/welcome_textView1"
            app:layout_constraintTop_toBottomOf="@+id/welcome_textView1"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>